--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+	<li data-ns-test="shoppingList">New Laptop</li>
+	<li data-ns-test="shoppingList">Camera Gear</li>
+	<li data-ns-test="shoppingList">Books Collection</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Santorini, Greece</li>
+		<li data-ns-test="holidayList">Kyoto, Japan</li>
+		<li data-ns-test="holidayList">Queenstown, New Zealand</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
